@@ -27,6 +27,9 @@ Changes since version 3.4.0
 C++ Changes
 ===========
 
+- Fixed a bug in slice2cpp so that asynchronous "end_op" methods are
+  now exported properly.
+
 - Fixed a bug in slice2cpp that would generate invalid code for a
   Slice exception when the --stream option was not used.
 
